// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches shallow shapshot shapshot 1 1`] = `
<ChallengeCard
  challenge={
    Object {
      "allPhases": Array [
        Object {
          "phaseStatus": "Open",
          "phaseType": "Registration",
        },
      ],
      "currentPhases": Array [
        "Registration",
      ],
      "events": Array [
        Object {
          "eventName": "Submit",
        },
      ],
      "isDataScience": true,
      "legacy": Object {
        "track": "DEVELOP",
      },
      "prize": Array [
        1200,
        600,
      ],
      "prizes": Array [
        1200,
        600,
      ],
      "status": "ACTIVE",
      "subTrack": "CODE",
      "tags": Array [
        "Data Science",
      ],
      "technologies": Array [
        "Data Science",
      ],
      "totalPrize": 1800,
      "users": Object {},
    }
  }
  challengeTypes={Array []}
  domRef={null}
  expandTag={null}
  expandedTags={Array []}
  newChallengeDetails={false}
  onTechTagClicked={[Function]}
  openChallengesInNewTabs={false}
  userHandle=""
/>
`;

exports[`Matches shallow shapshot shapshot 2 1`] = `
<ChallengeCard
  challenge={
    Object {
      "allPhases": Array [
        Object {
          "phaseStatus": "Open",
          "phaseType": "Submit",
        },
      ],
      "currentPhases": Array [
        "Registration",
      ],
      "events": Array [],
      "id": "1",
      "legacy": Object {
        "track": "DATA_SCIENCE",
      },
      "prizes": Array [
        1200,
        600,
      ],
      "subTrack": "CODE",
      "tags": Array [
        "Go",
      ],
      "technologies": Array [
        "Go",
      ],
      "totalPrize": 1800,
      "users": Object {},
    }
  }
  challengeTypes={Array []}
  domRef={null}
  expandTag={null}
  expandedTags={Array []}
  newChallengeDetails={false}
  onTechTagClicked={[Function]}
  openChallengesInNewTabs={false}
  userHandle=""
/>
`;

exports[`Matches shallow shapshot shapshot 3 1`] = `
<ChallengeCard
  challenge={
    Object {
      "allPhases": Array [
        Object {
          "phaseStatus": "Closed",
          "phaseType": "Registration",
        },
      ],
      "currentPhases": Array [
        "Registration",
      ],
      "events": Array [],
      "id": "long id",
      "legacy": Object {
        "track": "DATA_SCIENCE",
      },
      "prizes": Array [
        1200,
        600,
      ],
      "subTrack": "CODE",
      "tags": Array [],
      "technologies": Array [],
      "totalPrize": 1800,
      "users": Object {},
    }
  }
  challengeTypes={Array []}
  domRef={null}
  expandTag={null}
  expandedTags={Array []}
  newChallengeDetails={false}
  onTechTagClicked={[Function]}
  openChallengesInNewTabs={false}
  userHandle=""
/>
`;
